# msbuild

./: CMakeLists.txt  README.md  cmake-modules.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
_sources/: cmake-modules.rst.txt
cmake/: DawnGetGitHeadRevision.cmake  External_Boost.cmake  External_Dawn.cmake  External_Protobuf.cmake  External_dawn.cmake  External_gridtools.cmake  External_gtclang.cmake  MteoBildAddOptionalDeps.cmake  MteoBildCMakeInit.cmake  MteoBildClone.cmake  MteoBildCloneRepository.cmake  MteoBildFindPackage.cmake  MteoBildMakeCMakeScript.cmake  MteoBildMakePackageInfo.cmake  MteoBildSetDownloadDir.cmake  mchbuildAddCustomDummyTarget.cmake  mchbuildAddDependency.cmake  mchbuildAddExecutable.cmake  mchbuildAddTargetClangFormat.cmake  mchbuildAddUnittest.cmake  mchbuildCMakeInit.cmake  mchbuildCheckAndSetCXXFlag.cmake  mchbuildCheckCXXFlag.cmake  (+58 more)
cmake-modules/: DawGetCompilerStr.html  DawnAddCustomDummyTarget.html  DawnAddExecutable.html  DawnAddLibrary.html  DawnAddTargetClangFormat.html  DawnAddTargetCleanAll.html  DawnAddUnittest.html  DawnCMakeInit.html  DawnCheckAndSetCXXFlag.html  DawnCheckCXXFlag.html  DawnCheckInSourceBuild.html  DawnCombineLibraries.html  DawnConfigureFile.html  DawnExportOptions.html  DawnExportPackage.html  DawnFindPythonModule.html  DawnGetArchitectureInfo.html  DawnGetGitHeadRevision.html  DawnGetPlatformInfo.html  DawnGetScriptDir.html  DawnMakeStringPair.html  DawnReportResult.html  DawnSetCXXStandard.html  External_Boost.html  External_GTClang.html  External_Protobuf.html  External_dawn.html  External_gtclang.html  FindClang.html  FindGridTools.html  FindLLVM.html  FindSphinx.html  Findbash.html  Findccache.html  Findclang-format.html  GTClangAllOptions.html  msbuildAddCustomDummyTarget.html  msbuildAddDependency.html  msbuildAddOptionalDeps.html  msbuildAddTargetCleanAll.html  (+14 more)
(+72 files in other folders)
